--- a/notes.tex
+++ b/notes.tex
@@ -2,7 +2,6 @@
 \def\PREAMBLE{PREAMBLE}
 \title{Notes for Cryptography}
 \author{Jing LI\\pkuyplijing@gmail.com}
-
 \begin{document}
 \pagestyle{empty}
 \hypersetup{pageanchor=false}
@@ -18,6 +17,7 @@
 \addtocontents{toc}{\protect\thispagestyle{empty}}
 \input{Introduction}
 \input{StreamCiphers}
+\input{BlockCiphers}
 % \clearpage%somehow needed so that list of algorithms in toc jumps to the correct page.
 % \phantomsection
 % \addcontentsline{toc}{chapter}{\listalgorithmname}
