--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -20,6 +20,6 @@
 \input{BlockCiphers}
 % \clearpage%somehow needed so that list of algorithms in toc jumps to the correct page.
 % \phantomsection
-% \addcontentsline{toc}{chapter}{\listalgorithmname}
-% \listofalgorithms
+% \addcontentsline{toc}{chapter}{\listtheoremname}
+% \listoftheorems[ignoreall, show={definition}]
 \end{document}
